@@ -163,10 +163,11 @@ EOF
     ) >> configure.ac
 
     cat > Makefile.am <<EOF
+# this file is generated by autogen-pkg.sh
+
 SUBDIRS = $pkgs_ordered
 
-EXTRA_DIST = RELEASE-NOTES-0.2.0.txt RELEASE-NOTES-0.5.0.txt \\
-             dev-environ h2def.py \\
+EXTRA_DIST = dev-environ h2def.py \\
              autogen.sh autogen-pkg.sh autogen-support.sh
 
 EOF
