@@ -1,3 +1,7 @@
+2004-09-17  Andy Wingo  <wingo@pobox.com>
+
+	* autogen-pkg.sh (EXTRA_DIST): No more old release notes.
+
 2004-09-16  Andy Wingo  <wingo@pobox.com>
 
 	* AUTHORS: Add update-inventories to my AUTHORS list.
